Profile Feature Buttons have been added

--- a/mystream/streampage/templates/profile.html
+++ b/mystream/streampage/templates/profile.html
@@ -52,8 +52,18 @@
 			</div>
 		</div>
 	</div>
+	<div class="btn-group" role="group" aria-label="Basic example">
+		<button type="button" class="btn btn-primary">Owned Communities</button>
+		<button type="button" class="btn btn-primary">Following Communities</button>
+		<button type="button" class="btn btn-primary">Posts</button>
+		<button type="button" class="btn btn-primary">Activities</button>
+		<button type="button" class="btn btn-primary">Followers</button>
+		<button type="button" class="btn btn-primary">Following</button>
+		<button type="button" class="btn btn-primary">Alerts</button>
+	</div>
   </div><br><br>
 	<div class="row">
+		
 		<div class="col-sm-3">
 			<div class="row">
 			<table class="table">
