--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -20,7 +20,7 @@
 		<br>
 		<div class="row">
 			<div class="col-sm-3">
-				<img src="{{ community.communityPhoto }}" width="125" height="100" class="img-thumbnail"><br>
+				<img src="{{ community.communityPhoto }}" width="300" height="300" class="img-thumbnail"><br>
 			</div>
 			<div class="col-sm-9">
 				<p id="CommunityMetaData">{{ community.description }}</p>
@@ -137,10 +137,16 @@
 		<table class="small">
 		   {% for items in posts.comments %}
 		   <tr hash="{{items.commentHash}}">
-			  <td><img class="img-profile rounded-circle" src="/static/uploads/profiles/default.jpg"style="width:30px;height:30px;"></td>
+			  {% if items.postCommentCreator.userPhoto  %}
+					<img src="{{ UserInfo.userPhoto }}" class="img-thumbnail">
+					<td><img class="img-profile rounded-circle" src="{{ items.postCommentCreator.userPhoto }}"style="width:45px;height:45px;"></td>
+			  {% else %}
+					<td><img class="img-profile rounded-circle" src="/static/uploads/profiles/default.jpg"style="width:45px;height:45px;"></td>
+			  {% endif %}
+			  
 			  <td width="30px"><b>{{ items.postCommentCreator }}:</b></td>
-			  <td width="300px">{{ items.commentText }}</td>
-			  <td width="100px">{{ items.postCommentCreationDate }}</td>
+			  <td width="290px">{{ items.commentText }}</td>
+			  <td width="95px">{{ items.postCommentCreationDate }}</td>
 			  <td width="20px"><button type="button" id = "deleteComment" hash="{{items.commentHash}}" class="btn btn-sm btn-outline-secondary align-self-end p-2"><i class="fas fa-minus-circle" style="font-size:16px" aria-hidden="true"></i></button></td>
 		   </tr>
 		   {% endfor %}
