--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -1040,6 +1040,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 			dataType: "html",
 			success: function(data, textStatus, jqXHR){
 				alert(data);
+				window.location.reload()
 			}		
 	    });
 	});
@@ -1090,7 +1091,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 		$('#UserEditModal').modal('show');
 	});
 	
-	//EDIT USERINFO METADATA
+//EDIT USERINFO METADATA
 	$(document).on ("click", "#editUserButton", function (event) {
 		event.preventDefault();
 		var data = new FormData($('#editUser').get(0));
@@ -1098,6 +1099,27 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 		$.ajax({
 			type:'POST',
 			url: '/streampage/EditUser/',
+			data: data,
+			processData: false,
+			contentType: false,
+			dataType: "html",
+			success: function(data, textStatus, jqXHR){
+				alert(data)
+				window.location.reload();
+			}		
+		});
+	});
+
+//FOLLOW USER
+	$(document).on ("click", "#followUser", function (event) {
+		event.preventDefault();
+		var uNAme = $(this).attr('userName');
+		var data = new FormData();
+		data.append('user', uNAme);
+		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
+		$.ajax({
+			type:'POST',
+			url: '/streampage/FollowUser/',
 			data: data,
 			processData: false,
 			contentType: false,
@@ -1133,7 +1155,11 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 				<li class="nav-item dropdown no-arrow">
 					<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="mr-2 d-none d-lg-inline text-white-600 small">{{user}}</span>
-						<img class="img-profile rounded-circle" src="{% static 'uploads/profiles/default.jpg' %}">
+						{% if User_communities.userPhoto  %}
+							<img class="img-profile rounded-circle" src="{{ User_communities.userPhoto }}">
+						{% else %}
+							<img class="img-profile rounded-circle" src="{% static 'uploads/profiles/default.jpg' %}">
+						{% endif %}
 					</a>
 					<!-- Dropdown - User Information -->
 					<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
