--- a/mystream/streampage/templates/profile.html
+++ b/mystream/streampage/templates/profile.html
@@ -56,16 +56,16 @@
   
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" data-toggle="tab" href="#Alerts" role="tab">Alerts</a>
+    <a class="nav-link active" data-toggle="tab" href="#Alerts" role="tab">Reported Issues</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#Activities" role="tab">Activities</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="tab" href="#OwnedCommunities" role="tab">Owned Communities</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="tab" href="#FollowingCommunities" role="tab">Following Communities</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#Activities" role="tab">Activities</a>
   </li>
     <li class="nav-item">
     <a class="nav-link" data-toggle="tab" href="#Followers" role="tab">Followers</a>
@@ -82,18 +82,24 @@
 <div class="card mb-2">
 	<div class="card-body small">
 		<div class="d-flex flex-row align-items-center justify-content-between">
-			<table class="table">
-			{{ReportList.0.relatedcommunity}}
+			<table class="table-striped">
+			{% if ReportList.0.relatedCommunity.name %}
 				<th>Community</th>
 				<th>Posttype</th>
+				<th>Post</a></th>
 				<th>Reason</th>
-				<th>Creator</th>
+				<th>Details</th>
+				<th>Reporter</th>
 				<th>Date</th>
 				<th>Action</th>
+			{% else %}
+				<b>No Alert Present!</b>
+			{% endif %}
 				{% for rp in ReportList %}
 				<tr>
-					<script>console.log({{ rp.reportpostcreationdate}});</script>
-					<td>{{ rp.relatedcommunity.name}}</td>
+					<td><a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ rp.relatedCommunity.communityHash}}">{{ rp.relatedCommunity.name}}</td>
+					<td>{{ rp.relatedMeta.relatedDatatypes.name}}</td>
+					<td><a href="http://3.134.79.169:8000/streampage/showPostDetails/?postHash={{ rp.relatedMeta.postMetaHash}}">Reported Post</a></td>
 					{% if rp.reason == '0' %}
 						<td>Sensitive Data Disclosure</td>
 					{% elif rp.reason == '1' %}
@@ -101,11 +107,10 @@
 					{% elif rp.reason == '2' %}
 						<td>Other</td>
 					{% endif %}
-					<td>{{ rp.reason}}</td>
-					<td>{{ rp.reportpostcreationdate}}</td>
-				</tr>
-				<tr>
-					<td><b>Details</b></td><td>{{ rp.description}}</td>
+					<td>{{ rp.description}}</td>
+					<td>{{ rp.reportPostCreator.nickName}}</td>
+					<td>{{ rp.reportPostCreationDate}}</td>
+					<td><button type="button" id = "problemSolved" class="btn btn-sm btn-primary align-self-end p-2" style="width:100%" hash="{{ rp.reportHash}}"><i class="fa fa-check" style="font-size:16px" aria-hidden="true"> Solved</i><br></td>
 				</tr>
 				{% endfor %}
 			</table>
@@ -144,9 +149,70 @@
 		</div>
 	</div>
 </div>
-  <div class="tab-pane" id="Activities" role="tabpanel">pane 4</div>
-  <div class="tab-pane" id="Activities" role="Followers">pane 4</div>
-  <div class="tab-pane" id="Activities" role="Following">pane 4</div>
+  <div class="tab-pane" id="Activities" role="tabpanel">
+   {% for activity in activities %}
+	<div class="card shadow mb-4 col-md-12">
+			<!-- Card Body -->
+        <div class="card-body">
+		  <div class="d-flex flex-row align-items-center justify-content-between">
+			<div class="modal-body row">
+				<div class="col-md-9 small">
+					{% if activity.detail.actor.photo %}
+						<a href="http://3.134.79.169:8000/streampage/UserPage?user={{ activity.detail.actor.name }}"><img class="img-profile rounded-circle" src="{{activity.detail.actor.photo}}"style="width:30px;height:30px;"></a>
+					{% else %}
+						<a href="http://3.134.79.169:8000/streampage/UserPage?user={{ activity.detail.actor.name }}">
+						<img class="img-profile rounded-circle" src="/static/uploads/profiles/default.jpg"style="width:30px;height:30px;"></a>
+					{% endif %}
+					<b><a href="http://3.134.79.169:8000/streampage/UserPage?user={{ activity.detail.actor.name }}">
+					{% if activity.detail.type == "login"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has logged in to the server&nbsp;
+					{% elif activity.detail.type == "joined"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} to <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.object.hash}}">{{activity.detail.object.name}}</a> {{activity.detail.object.type}} 
+					{% elif activity.detail.type == "created" and activity.detail.object.type == "Community"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.object.hash}}">{{activity.detail.object.name}}</a> {{activity.detail.object.type}} 
+					{% elif activity.detail.type == "edited" and activity.detail.object.type == "Community"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.object.hash}}">{{activity.detail.object.name}}</a> {{activity.detail.object.type}} 
+					{% elif activity.detail.type == "deleted" and activity.detail.object.type == "Community"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <b>{{activity.detail.object.name}}</b> {{activity.detail.object.type}} 
+ 					{% elif activity.detail.type == "created" and activity.detail.object.type == "Posttype"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <b>{{ activity.detail.object.name }}</b> posttype at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "edited" and activity.detail.object.type == "Posttype"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <b>{{ activity.detail.object.name }}</b> posttype at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "deleted" and activity.detail.object.type == "Posttype"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} <b>{{ activity.detail.object.name }}</b> posttype description at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "added" and activity.detail.object.type == "PosttypeField"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a new posttype field  on <b>{{ activity.detail.object.name }} posttype</b> at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "updated" and activity.detail.object.type == "PosttypeField"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a posttype field  on <b>{{ activity.detail.object.name }} posttype</b> at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "deleted" and activity.detail.object.type == "PosttypeField"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a posttype field  on <b>{{ activity.detail.object.name }} posttype</b> at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "subscribed" and activity.detail.object.type == "Posttype"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} to <b>{{ activity.detail.object.name }} posttype</b> at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "created" and activity.detail.object.type == "Post"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a new <b>{{ activity.detail.object.posttype }} type </b><a href="http://3.134.79.169:8000/streampage/showPostDetails/?postHash={{ activity.detail.object.hash }}">post</a> at <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "deleted" and activity.detail.object.type == "Post"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a <b>{{ activity.detail.object.posttype }} type </b> post from <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}
+ 					{% elif activity.detail.type == "commented" and activity.detail.object.type == "Comment"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} on the <b>{{ activity.detail.object.posttype }} type </b><a href="http://3.134.79.169:8000/streampage/showPostDetails/?postHash={{ activity.detail.object.hash }}">post</a> on <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a> {{activity.detail.target.type}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>"{{activity.detail.object.name}}"</i>
+ 					{% elif activity.detail.type == "deleted" and activity.detail.object.type == "Comment"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a comment from the <b>{{ activity.detail.object.posttype }} type </b><a href="http://3.134.79.169:8000/streampage/showPostDetails/?postHash={{ activity.detail.object.hash }}">post</a> on <a href="http://3.134.79.169:8000/streampage/sendPosttypePage/?showDataTypes={{ activity.detail.target.hash}}">{{activity.detail.target.name}}</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>"{{activity.detail.object.name}}"</i>
+ 					{% elif activity.detail.type == "uploaded" and activity.detail.object.type == "ProfilePhoto"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} a new profile photo.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ activity.detail.object.name }}" class="img-thumbnail"><br>
+ 					{% elif activity.detail.type == "updated" and activity.detail.object.type == "ProfileInformation"%}
+						{{ activity.detail.actor.name }}</a></b>&nbsp;has {{activity.detail.type}} the profile information.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i><b>mail: </b>{{activity.detail.object.email}}</i><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i><b>bio: </b>"{{activity.detail.object.bio}}"</i>
+					{% endif %}
+				</div>
+				<div class="col-md-3 small">
+					{{ activity.detail.published }}
+				</div>
+			</div>
+		  </div>
+		</div>
+    </div>
+    {% endfor %}
+  </div>
+  <div class="tab-pane" id="Followers" role="tabpanel">pane 4</div>
+  <div class="tab-pane" id="Following" role="tabpanel">pane 4</div>
 </div><br><br>
 <!-- Community Edit Modal -->
 	<div class="modal fade" id="UserEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
