--- a/mystream/streampage/templates/profile.html
+++ b/mystream/streampage/templates/profile.html
@@ -211,8 +211,8 @@
     </div>
     {% endfor %}
   </div>
-  <div class="tab-pane" id="Followers" role="tabpanel">pane 4</div>
-  <div class="tab-pane" id="Following" role="tabpanel">pane 4</div>
+  <div class="tab-pane" id="Followers" role="tabpanel">pane</div>
+  <div class="tab-pane" id="Following" role="tabpanel">pane</div>
 </div><br><br>
 <!-- Community Edit Modal -->
 	<div class="modal fade" id="UserEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
