--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <button type="button" id="AddCommunity" class="btn btn-primary btn-sm small" data-toggle="modal" data-target="#CommunityModal">
-	<i class="fa fa-plus" aria-hidden="true"></i>
-	Add Community
-  </button>
+<div class="d-flex flex-row align-items-center justify-content-between">
+	  <button type="button" id="AddCommunity" class="btn btn-primary btn-sm small" data-toggle="modal" data-target="#CommunityModal">
+		<i class="fa fa-plus" aria-hidden="true"></i>
+		Add Community
+	  </button>
+	  <div class="small">
+		<form class="form-inline" action="/streampage/communityPageSearch">
+			<input class="form-control mr-sm-2 small" type="search" placeholder="Search" aria-label="Search" name="keyword">
+			<button class="btn btn-primary my-2 my-sm-0 small" type="submit">Search</button>
+		</form>
+	  </div>
+</div>
   <br>
   <br>
   <div id="community_list" class="row">
